Corrected Spacing Issue
Corrected all indentations to be the correct 2 spaces instead of 4.

--- a/week-4/project10-01/styles.css
+++ b/week-4/project10-01/styles.css
@@ -1,18 +1,18 @@
-/*  JavaScript 7th Edition
-    Chapter 10
-    Hands-on Project 10-1
+/* JavaScript 7th Edition
+   Chapter 10
+   Hands-on Project 10-1
 
-    Filename: styles.css
+   Filename: styles.css
 */
 
-/* apply a natural box layout model to all elements */
+/* Apply a natural box layout model to all elements */
 * {
-   -moz-box-sizing: border-box;
-   -webkit-box-sizing: border-box;
-   box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-/* reset rules */
+/* Reset rules */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -26,94 +26,92 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-   margin: 0;
-   padding: 0;
-   border: 0;
-   font-size: 100%;
-   font: inherit;
-   vertical-align: baseline;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
-   display: block;
+  display: block;
 }
 
 body {
-   line-height: 1;
-   width: 960px;
-   background: white;
-   margin: 0 auto;
-   font-family: Verdana, Geneva, sans-serif; 
+  line-height: 1;
+  width: 960px;
+  background: white;
+  margin: 0 auto;
+  font-family: Verdana, Geneva, sans-serif; 
 }
 
 ol, ul {
-   list-style: none;
+  list-style: none;
 }
 
-/* page header */
+/* Page header */
 header {
-   background: #5472B2;
-   width: 100%;
-   color: #FFFFFF;
-   font-size: 48px;
-   text-align: center;
-   line-height: 1.5em;
-   margin-bottom: 0;
+  background: #5472B2;
+  width: 100%;
+  color: #FFFFFF;
+  font-size: 48px;
+  text-align: center;
+  line-height: 1.5em;
+  margin-bottom: 0;
 }
 
-
-
-/*-------------------- Project Styles ------------------*/
-
+/* Project Styles */
 section {
-   background-color: #FFDB70;
-   margin-top: 0;
-   padding-bottom: 20px;
-   user-select:none;
-   height: 980px;
+  background-color: #FFDB70;
+  margin-top: 0;
+  padding-bottom: 20px;
+  user-select: none;
+  height: 980px;
 }
 
 section h1 {
-   font-size: 2.8em;
-   text-align: center;
-   margin: 0;
-   padding: 20px 0;
+  font-size: 2.8em;
+  text-align: center;
+  margin: 0;
+  padding: 20px 0;
 }
 
 section p {
-   width: 800px;
-   margin: 0 auto;
-   font-size: 1.3em;
-   line-height: 1.3;
-   font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", "serif"
+  width: 800px;
+  margin: 0 auto;
+  font-size: 1.3em;
+  line-height: 1.3;
+  font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", "serif";
 }
+
 section p img {
-   float: right;
-   margin: 0 20px 20px 20px;
-   width: 280px;
+  float: right;
+  margin: 0 20px 20px 20px;
+  width: 280px;
 }
 
 em {
-   font-style: italic;
+  font-style: italic;
 }
 
 div#puzzleBoard {
-   clear: right;
-   width: 800px;
-   height: 600px;
-   margin: 20px auto;
-   border: 5px solid gray;
-   position: relative;
-   background-color: yellow;
+  clear: right;
+  width: 800px;
+  height: 600px;
+  margin: 20px auto;
+  border: 5px solid gray;
+  position: relative;
+  background-color: yellow;
 }
 
 div#puzzleBoard img {
-   position: absolute;
-   user-drag: none;
-   user-select: none;
-   filter: drop-shadow(2px 2px 5px black);
-   cursor: pointer;
-   display: block;
+  position: absolute;
+  user-drag: none;
+  user-select: none;
+  filter: drop-shadow(2px 2px 5px black);
+  cursor: pointer;
+  display: block;
 }
